AC_INIT(ultraparse.c)
#AC_CONFIG_HEADER(ultraparse.h)

AC_PROG_CC

# Substitution of variables already existing.


AC_SUBST(PIKE_INCLUDE_DIR)
AC_SUBST(PIKE_MODULE_DIR)
AC_SUBST(PIKE)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(CC)
AC_SUBST(LDFLAGS)
AC_SUBST(LDSHARED)
AC_SUBST(LIBGCC)
AC_SUBST(SO)

AC_OUTPUT(Makefile dependencies ultrasum, [chmod +x ultrasum; make depend])


dnl ## Local Variables:
dnl ## tab-width: 4
dnl ## End:
	
